--- a/Shortify/Properties/launchSettings.json
+++ b/Shortify/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:44322;http://localhost:5000"
+      "applicationUrl": "https://localhost:44322;"
     }
   }
 }
