--- a/URLShortenerApi/Properties/launchSettings.json
+++ b/URLShortenerApi/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "https://localhost:44364/swagger/index.html",
-      "applicationUrl": "https://localhost:44364;http://localhost:5000",
+      "applicationUrl": "https://localhost:44364;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
