Added Unit Test cases

--- a/URLShortenerApi/appsettings.json
+++ b/URLShortenerApi/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "IntToChar": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ",
   "BaseUrl": "https://localhost:44322/",
-  "SecretKey": "Some-very-long-secret-key"
+  "SecretKey": "Some-very-long-secret-key",
+  "ConnectionStrings": {
+    "UrlShortenerContext": "add-connection-string-here"
+  }
 }
