--- a/Shortify/appsettings.json
+++ b/Shortify/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "SecretKey": "Some-very-long-secret-key"
+  "SecretKey": "Some-very-long-secret-key",
+  "ConnectionStrings": {
+    "UrlShortenerContext": "add-connection-string-here"
+  }
 }
